# weeb-heaven-backend

./: .eslintrc.js  .gitignore  .prettierrc  Cargo.toml  README.md  package.json  tsconfig.json
src/: app.module.ts  main.rs  main.ts  server.rs  types.rs
src/configs/: index.ts  mod.rs  server-config.module.ts  server_config.rs
src/constants/: env.constant.ts  env_constant.rs  mod.rs
src/modules/: health_check.rs  mod.rs
src/shares/errors/: server_error.rs
src/shares/middlewares/: logger.rs
