[package]
name = "weeb-heaven-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
derive_more = "0.99.17"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
utoipa = "4.2.0"
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
